[feat] página de Quiz
- estrutura
- perguntas e respostas
- ideia comentada para exibição do resultado

- ajuste da logo padrão em todas as páginas
- alguns ajustes de cor e tamanho de fonte

--- a/estilo/carrossel.css
+++ b/estilo/carrossel.css
@@ -1,13 +1,14 @@
 #carrossel{
     display: flex;
     justify-content: center;
+    background-color: #d81111c4;
 }
 
 .flv{
     margin: 100px;
     width: 400px;
     height: 300px;
-    background-color: brown;
+    background-color: white;
 }
 
 .flv-image{
