--- a/estilo/header.css
+++ b/estilo/header.css
@@ -8,13 +8,15 @@ header{
     width: 100%;
     position: fixed;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: aquamarine;
+    background-color: #e8c847;
+
 }
 
 header div img{
     width: 160px;
+    margin-left: 50%;
 }
 
 header ul {
@@ -35,5 +37,6 @@ header li a {
 
 
 li > svg{
-    width: 25px;
+    width: 50px;
+    margin:0 70px 0 50px;
 }
