--- a/estilo/carrossel.css
+++ b/estilo/carrossel.css
@@ -1,34 +1,55 @@
 #carrossel{
     display: flex;
     justify-content: center;
-    background-color: #d81111c4;
+
 }
 
 .flv{
-    margin: 100px;
+    padding: 80px 0;
     width: 400px;
     height: 300px;
     background-color: white;
+    text-align: center;
 }
 
 .flv-image{
-    width: 95%;
-    background-color: black;
+    width: 90%;
     height: 220px;
     margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.flv h3{
+    padding-bottom: 15px;
 }
 
 .maca{
-    background-image: url(../img/maca.jpg);
+    background-image: url(../img/Maça.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
+.pera{
+    background-image: url(../img/Pera.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.banana{
+    background-image: url(../img/Banana.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+
+
 .esq{
     margin-left: 10px;
-    position: relative;
-    top: 50%;
+position: relative;
+top: 50%;
     background-image: url(../img/arrow-arrow-left.png);
     width: 50px;
     height: 50px;
@@ -40,6 +61,7 @@
 }
 
 .dir{
+    background-color: unset;
     margin-right: 10px;
     position: relative;
     top: 50%;
@@ -50,7 +72,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     border: 0;
-    background-color: unset;
 }
 
 #carrossel button:hover{
