--- a/estilo/quiz.css
+++ b/estilo/quiz.css
@@ -12,12 +12,12 @@ main {
     text-align: center;
 }
 
-h2 {
-    padding: 20px 0 50px 0;
+h1 {
+    padding: 0px 0 20px 0;
 }
 
 .img01 {
-    /* background-image: url('../img/alface.jpg'); */
+    background-image: url('../img/alface.jpg');
     background-color: aqua;
     margin: 0 auto;
     background-position: center;
@@ -27,12 +27,13 @@ h2 {
 }
 
 
-h3{
+h2{
     padding: 20px 0 40px 0;
 }
 
 main div p{
     padding: 5px 0;
+    font-size: 20px;
 }
 
 .alternativas{
