--- a/estilo/rodape.css
+++ b/estilo/rodape.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #49780a;
+    background-color: #6e9442;
     color: white;
     padding: 20px;
 }
 
 .rodape li{
     list-style: none;
+    padding: 2px 0;
 }
