--- a/estilo/mainintro.css
+++ b/estilo/mainintro.css
@@ -1,4 +1,4 @@
-.intro{
+.intro {
     background-image: url(./../img/frutas.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -6,7 +6,7 @@
     height: 800px;
 }
 
-.intro-info{
+.intro-info {
     position: relative;
     top: 32%;
     color: white;
@@ -15,21 +15,22 @@
     z-index: 0;
 }
 
-h1, p{
+h1,
+p {
     margin-bottom: 50px;
     max-width: 800px;
 }
 
-.intro-info > button{
+.intro-info>button {
     width: 300px;
     height: 60px;
     background-color: rgb(207, 233, 188);
     border: 0;
     transition: .8s;
-    
+
 }
 
-.intro-info > button:hover{
+.intro-info>button:hover {
     cursor: pointer;
     transition: .8s;
     letter-spacing: 2px;
