--- a/estilo/quiz.css
+++ b/estilo/quiz.css
@@ -1,3 +1,11 @@
+.display_block{
+    display: block;
+}
+
+.display_none{
+    display: none;
+}
+
 main {
     padding-top: 200px;
     background-color: rgba(171, 231, 160, 0.737);
