--- a/estilo/rodape.css
+++ b/estilo/rodape.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #6e9442;
+    background-color: green;
     color: white;
     padding: 20px;
 }
