--- a/assets/style/carrossel.css
+++ b/assets/style/carrossel.css
@@ -23,22 +23,64 @@
     padding-bottom: 15px;
 }
 
-.maca {
-    background-image: url(../img/Maça.png);
+#maca {
+    background-image: url(../img/fruta/red-apple-isolated.jpg);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-.pera {
-    background-image: url(../img/Pera.png);
+#pera {
+    background-image: url(../img/fruta/pera_isolated.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-.banana {
-    background-image: url(../img/Banana.png);
+#banana {
+    background-image: url(../img/fruta/banana_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#pepino{
+    background-image: url(../img/legume/pepino_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#abobora{
+    background-image: url(../img/legume/abobora_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#batata{
+    background-image: url(../img/legume/batata_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#alface{
+    background-image: url(../img/verdura/alface_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#couve{
+    background-image: url(../img/verdura/couve_isolated.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#espinafre{
+    background-image: url(../img/verdura/espinafre_isolated.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
