[feat] preparaçao carrossel principal
- adição de botões que vao alterar conteudo principal do site

--- a/assets/style/mainintro.css
+++ b/assets/style/mainintro.css
@@ -36,3 +36,24 @@ p {
     letter-spacing: 2px;
     font-size: 20px;
 }
+
+#sessoes{
+    height: 410px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    text-align: center;
+
+    & button{
+        margin: 0 20px;
+        border: none;
+        border-radius: 50%;
+        background-color: red;
+        height: 20px;
+        width: 20px;
+    };
+
+    & button:hover {
+        cursor: pointer;
+    }
+}
