--- a/assets/style/quiz.css
+++ b/assets/style/quiz.css
@@ -29,55 +29,59 @@ h1 {
     padding: 20px 0;
     width: 1000px;
     height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 #questao01 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao1.jpeg');
     background-position: center;
+
 }
 
 #questao02 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao2.jpeg');
     background-position: center;
 }
 
 #questao03 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao3.png');
     background-position: center;
 }
 
 #questao04 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao4.jpeg');
     background-position: center;
+    background-size: contain;
 }
 
 #questao05 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao5.jpeg');
     background-position: center;
 }
 
 #questao06 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao6.jpeg');
     background-position: center;
 }
 
 #questao07 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao7.jpeg');
     background-position: center;
 }
 
 #questao08 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao8.jpeg');
     background-position: center;
 }
 
 #questao09 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao9.jpeg');
     background-position: center;
 }
 
 #questao10 .imagem-questao{
-    background-image: url('../img/alface.jpg');
+    background-image: url('../img/quiz/quiz1-questao10.jpeg');
     background-position: center;
 }
 
