--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -7,6 +7,8 @@ header {
     z-index: 1;
     width: 100%;
     position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
