--- a/assets/style/mainintro.css
+++ b/assets/style/mainintro.css
@@ -1,27 +1,44 @@
+.display_block {
+    display: block;
+}
+
+.display_none {
+    display: block;
+}
+
 .intro {
     background-image: url(./../img/frutas.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 800px;
+    margin-top: 55px;
 }
 
 .intro-info {
-    position: relative;
-    top: 32%;
     color: white;
     font-size: 1.5em;
-    margin-left: 3%;
     z-index: 0;
 }
 
-h1,
-p {
+.intro-info h1 {
+    padding-top: 10%;
     margin-bottom: 50px;
-    max-width: 800px;
+    margin-left: 3%;
 }
 
-.intro-info>button {
+.intro-info p{
+    margin-bottom: 50px;
+    max-width: 900px;
+    margin-left: 3%;
+}
+
+p#missao{
+    max-width: 750px;
+}
+
+.intro-info button {
+    margin-left: 3%;
     width: 300px;
     height: 60px;
     background-color: rgb(207, 233, 188);
@@ -30,15 +47,32 @@ p {
 
 }
 
-.intro-info>button:hover {
+.intro-info button:hover {
     cursor: pointer;
     transition: .8s;
     letter-spacing: 2px;
     font-size: 20px;
 }
 
+#video {
+    width: 100%;
+    height: 800px;
+    background-color: rgb(119, 118, 118);
+    display: flex;
+    align-items: center;
+}
+
+.video {
+    width: 85%;
+    margin: 0 auto;
+    background-color: black;
+    height: 90%;
+}
+
+
+
 #sessoes {
-    height: 410px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -48,9 +82,13 @@ p {
         margin: 0 20px;
         border: none;
         border-radius: 50%;
-        background-color: red;
+        background-color: green;
         height: 20px;
         width: 20px;
+    }
+
+    & button:last-child{
+        background-color: red
     }
 
     ;
