--- a/assets/style/quiz.css
+++ b/assets/style/quiz.css
@@ -38,54 +38,54 @@ h1 {
     background-repeat: no-repeat;
 }
 
-#questao01 .imagem-questao {
+#blocoQuestao01 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao1.jpeg');
     background-position: center;
 
 }
 
-#questao02 .imagem-questao {
+#blocoQuestao02 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao2.jpeg');
     background-position: center;
 }
 
-#questao03 .imagem-questao {
+#blocoQuestao03 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao3.png');
     background-position: center;
 }
 
-#questao04 .imagem-questao {
+#blocoQuestao04 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao4.jpeg');
     background-position: center;
     background-size: contain;
 }
 
-#questao05 .imagem-questao {
+#blocoQuestao05 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao5.jpeg');
     background-position: center;
 }
 
-#questao06 .imagem-questao {
+#blocoQuestao06 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao6.jpeg');
     background-position: center;
 }
 
-#questao07 .imagem-questao {
+#blocoQuestao07 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao7.jpeg');
     background-position: center;
 }
 
-#questao08 .imagem-questao {
+#blocoQuestao08 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao8.jpeg');
     background-position: center;
 }
 
-#questao09 .imagem-questao {
+#blocoQuestao09 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao9.jpeg');
     background-position: center;
 }
 
-#questao10 .imagem-questao {
+#blocoQuestao10 .imagem-questao {
     background-image: url('../img/quiz/quiz1-questao10.jpeg');
     background-position: center;
 }
@@ -116,4 +116,8 @@ input {
     margin-right: 25px;
     width: 18px;
     height: 18px;
+}
+
+button{
+    padding: 15px 45px;
 }
