--- a/assets/style/mainintro.css
+++ b/assets/style/mainintro.css
@@ -12,7 +12,6 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 800px;
-    margin-top: 55px;
 }
 
 .intro-info {
@@ -41,10 +40,9 @@ p#missao{
     margin-left: 3%;
     width: 300px;
     height: 60px;
-    background-color: rgb(207, 233, 188);
+    background-color: #51b441;
     border: 0;
     transition: .8s;
-
 }
 
 .intro-info button:hover {
@@ -54,25 +52,8 @@ p#missao{
     font-size: 20px;
 }
 
-#video {
-    width: 100%;
-    height: 800px;
-    background-color: rgb(119, 118, 118);
-    display: flex;
-    align-items: center;
-}
-
-.video {
-    width: 85%;
-    margin: 0 auto;
-    background-color: black;
-    height: 90%;
-}
-
-
-
 #sessoes {
-    height: 20px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -86,12 +67,6 @@ p#missao{
         height: 20px;
         width: 20px;
     }
-
-    & button:last-child{
-        background-color: red
-    }
-
-    ;
 
     & button:hover {
         cursor: pointer;
