--- a/assets/style/rodape.css
+++ b/assets/style/rodape.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(205, 34, 54);
+    background-color: #057b05;
     color: white;
     padding: 20px;
 }
