[chore] ajuste altura botão

--- a/assets/style/mainintro.css
+++ b/assets/style/mainintro.css
@@ -52,6 +52,10 @@ p#missao{
     font-size: 20px;
 }
 
+#intro-visao{
+    padding-top: 4px;
+}
+
 #intro-btn-navegacao {
     padding-top: 100px;
     display: flex;
