--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -1,10 +1,12 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
-header {
+.header {
+    font-size: 0;
     z-index: 1;
     width: 100%;
     position: fixed;
@@ -14,65 +16,71 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: #fff281;
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
-header div img {
+.header .logo img {
     width: 200px;
-    margin-left: 20%;
+    margin-left: 50px;
 }
 
-header ul {
+.header nav ul {
     display: flex;
     align-items: center;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-header li {
+.header li {
     margin-left: 30px;
     font-size: 25px;
 }
 
-header li a {
+.header li a {
     text-decoration: none;
     color: #51b441;
 }
 
-
-li>svg {
-    margin: 0 70px 0 50px;
-    width: 30px;
-    height: auto;
+.menu-hamb {
+    margin: 0 50px 0 0;
     cursor: pointer;
-    color: #51b441;
+    width: 35px;
+    height: 35px;
 }
 
-#barraLateral{
+#barraLateral {
     display: none;
-    padding-top: 77px;
+    padding-top: 78px;
     background-color: #fff281;
     margin: 0 auto;
     text-align: center;
     transition: .9s;
 }
 
-#barraLateral p{
+#barraLateral p {
     border-top: 1px solid black;
-    padding: 5px 0;
+    padding-top: 5px;
+    margin-bottom: 3px;
 }
 
-#barraLateral a{
+#barraLateral a {
     color: black;
     text-decoration: none;
 }
 
-#barraLateral ol li{
+aside#barraLateral ol {
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+#barraLateral ol li {
     border-top: 1px solid black;
     list-style: none;
     padding: 5px 0;
 }
 
-#barraLateral ol li:hover{
+#barraLateral ol li:hover {
     background-color: #faea54f9;
     transition: .2s;
 }
