--- a/assets/style/pontos-positivos.css
+++ b/assets/style/pontos-positivos.css
@@ -1,14 +1,14 @@
 .pontos-positivos {
     display: flex;
-    justify-content: space-around;
-    padding: 20px 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 50px;
 }
 
 .box {
-    padding: 80px 0;
-    width: 400px;
-    height: 300px;
-    background-color: white;
+    flex: 1 1 calc(29.333%) ;
+    padding: 70px 2% 0 2%;
+    width: 100%;
     text-align: justify;
 }
 
@@ -23,4 +23,24 @@
     margin: 0 auto;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.box-content img{
+    width: 200px;
+}
+
+@media (max-width: 980px) {
+    .box {
+        flex: 1 1 calc(46%) ;
+        padding: 30px 2%;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .box {
+        flex: 1 1 calc(100%);
+        padding: 20px 4%;
+    }
+    
 }
