--- a/assets/style/mainintro.css
+++ b/assets/style/mainintro.css
@@ -11,7 +11,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 800px;
 }
 
 .intro-info {
@@ -34,15 +33,20 @@
 
 p#missao{
     max-width: 750px;
+    font-size: 26px;
 }
 
 .intro-info button {
     margin-left: 3%;
-    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 25px;
     height: 60px;
     background-color: #51b441;
     border: 0;
     transition: .8s;
+    display: flex;
+    align-items: center;
 }
 
 .intro-info button:hover {
@@ -52,28 +56,61 @@ p#missao{
     font-size: 20px;
 }
 
-#intro-visao{
-    padding-top: 4px;
+.intro-info a{
+    color: black;
+    text-decoration: none;
+    margin: auto;
+    text-align: center;
+}
+
+#pretencao{
+    font-size: 26px;
 }
 
 #intro-btn-navegacao {
-    padding-top: 100px;
+    padding-top: 50px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     text-align: center;
+}
 
-    & svg {
-        margin: 0 20px;
-        border: none;
-        border-radius: 50%;
-        background-color: white;
-        height: 40px;
-        width: 40px;
+#intro-btn-navegacao svg{
+    margin: 0 20px;
+    border: none;
+    border-radius: 50%;
+    background-color: white;
+    height: 40px;
+    width: 40px;
+    margin-bottom: 50px;
+}
+
+#intro-btn-navegacao button:hover{
+    cursor: pointer;
+}
+
+@media (max-width: 780px) {
+    .intro-info h1 {
+        text-align: center;
+        letter-spacing: 2px;
+        padding: 100px 2% 0 2%;
     }
 
-    & button:hover {
-        cursor: pointer;
+    .intro-info p{
+        text-align: justify;
+        padding: 0 3% 0 3%;
+        margin: 0;
+    }
+
+    .intro-info button {
+        text-align: center;
+        margin-top: 20px;
+        
     }
 }
 
+@media (max-width: 610px) {
+    .intro .intro-info p#missao, p#pretencao {
+        font-size: 25px;
+    }
+}
