--- a/assets/style/article.css
+++ b/assets/style/article.css
@@ -1,9 +1,8 @@
-html body main .accordion{
+html body main .accordion {
     width: 100%;
-    
 }
 
-.accordion-item{
+.accordion-item {
     width: 90%;
     margin: 0 auto;
 }
@@ -11,9 +10,35 @@ html body main .accordion{
 main {
     padding-top: 80px;
     background-color: rgba(171, 231, 160, 0.737);
-    max-width: 1280px;
     margin: 0 auto;
-    padding-left: 50px;
-    padding-bottom: 800px;
+    padding-bottom: 50px;
+    min-height: 100vh;
     box-shadow: 10px 10px 10px 10px rgb(0 0 0 / 20%);
+}
+
+article.container {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.container h2 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.container p,
+li {
+    font-size: 23px;
+    text-align: justify;
+}
+
+.container li {
+    margin: 10px 0;
+}
+
+.keywords {
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
 }
